Fixed keycloak bug with the DB_VENDOR

--- a/deployment/mesh-infra/keycloak/base.yaml
+++ b/deployment/mesh-infra/keycloak/base.yaml
@@ -54,6 +54,8 @@ spec:
             secretKeyRef:
               name: keycloak-builtin-admin
               key: password
+        - name: DB_VENDOR
+          value: "h2"
         ports:
         - name: http
           containerPort: 8080
