Changed URLs and IPs

--- a/deployment/mesh-infra/_replacements_/custom-urls.yaml
+++ b/deployment/mesh-infra/_replacements_/custom-urls.yaml
@@ -8,14 +8,14 @@ data:
   # A URL pointing to a custom Git online repo from where to source the
   # Kustomization to build the cluster. Overrides the default of
   # - https://github.com/c0c0n3/kitt4sme.live
-  argocd.repo: TODO
+  argocd.repo: https://github.com/ds2268/kitt4sme.live.local
 
   # URL to the Argo CD Web UI. You should only replace the host part
   # and/or the scheme (http, https) but keep the path (/argocd) unless
   # you also change the Istio ingress route.
   # Overrides the default of
   # - https://kitt4sme.collab-cloud.eu/argocd
-  argocd.webapp: http://TODO/argocd
+  argocd.webapp: http://192.168.65.2/argocd
 
   # OIDC config. You only need this if you've configured Argo CD to do
   # SSO with Keycloak. The only thing you should change in the block
@@ -25,7 +25,7 @@ data:
   # Don't modify anything else unless you know what you're doing :-)
   argocd.sso: |
     name: Keycloak
-    issuer: http://TODO/auth/realms/master
+    issuer: http://192.168.65.2/auth/realms/master
     clientID: argocd
     clientSecret: $oidc.keycloak.clientSecret
     requestedScopes: ["openid", "profile", "email", "groups"]
